Codeclimate satisfy