@@ -1,11 +1,11 @@
 package ru.vk.itmo.test.bandurinvladislav.util;
 
-public class StringUtil {
+public final class StringUtil {
     private StringUtil() {
         throw new UnsupportedOperationException();
     }
 
     public static boolean isEmpty(String s) {
-        return s == null || s.trim().isEmpty();
+        return s == null || s.isBlank();
     }
 }
